--- a/Application/Zhangjiahao/View/User/Toevaluate.html
+++ b/Application/Zhangjiahao/View/User/Toevaluate.html
@@ -8,84 +8,51 @@
   <link href="__CSS__/style.css" rel="stylesheet">
 </head>
 
-<body  >
-	<div class="bar bar-header  bar-positive">  
-   
-	<h1 class="title">待评价订单</h1>  
+<body>
 
+	<div class="bar bar-header  bar-positive">  
+	   <a href="" class="button button-icon icon ion-chevron-left"></a>     
+
+	<h1 class="title">待评价订单</h1>          
 	</div>
 	<div class="list  has-header">
-	
 		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
-		 
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
+		    <div class="list card">
 
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
+   <div class="item item-thumbnail-left">
+    <img src="__IMG__/jiudian.jpg">
+     <h2>价格：￥99.9</h2>
+          <h2>介绍:大床房</h2>
+          <h2>入住时间:2015.11.23</h2>
                  <button class="button button-icon-right button-small button-positive
                  pull button-right">
                 评价赢积分
                </button>
-		    </div>
+  </div>
+   <div class="item item-thumbnail-left">
+    <img src="__IMG__/jiudian.jpg">
+     <h2>价格：￥99.9</h2>
+          <h2>介绍:大床房</h2>
+          <h2>入住时间:2015.11.23</h2>
+                 <button class="button button-icon-right button-small button-positive
+                 pull button-right">
+                评价赢积分
+               </button>
+  </div>
 
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
+
+
+   <div class="item item-thumbnail-left">
+    <img src="__IMG__/jiudian.jpg">
+     <h2>价格：￥99.9</h2>
+          <h2>介绍:大床房</h2>
+          <h2>入住时间:2015.11.23</h2>
                  <button class="button button-icon-right button-small button-positive
                  pull button-right">
                 评价赢积分
                </button>
-		    </div>
-		    
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
+   </div>
+</div>
 	    </div>
 	    
 	</div>
