--- a/Application/Zhangjiahao/View/User/checkin.html
+++ b/Application/Zhangjiahao/View/User/checkin.html
@@ -3,102 +3,44 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title></title>
-
+  <title>待入住订单</title>
   <link href="__LIB__/ionic/css/ionic.css" rel="stylesheet">
   <link href="__CSS__/style.css" rel="stylesheet">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-  -->
-
-
-  <!-- ionic/angularjs js -->
-  <script src="__LIB__/ionic/js/ionic.bundle.js"></script>
-
-  <!-- your app's js -->
-  <script src="__JS__/app.js"></script>
-
-
 </head>
-<body  >
-	<div class="bar bar-header  bar-positive">  
-   
-	<h1 class="title">待评价订单</h1>  
 
+<body>
+
+	<div class="bar bar-header  bar-positive">  
+	   <a href="" class="button button-icon icon ion-chevron-left"></a>     
+
+	<h1 class="title">待入住订单</h1>          
 	</div>
 	<div class="list  has-header">
-	
 		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
-		 
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
+		    <div class="list card">
 
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
+   <div class="item item-thumbnail-left">
+    <img src="__IMG__/jiudian.jpg">
+     <h2>价格：￥99.9</h2>
+          <h2>介绍:大床房</h2>
+          <h2>入住时间:2015.11.23</h2>
+  </div>
+   <div class="item item-thumbnail-left">
+    <img src="__IMG__/jiudian.jpg">
+     <h2>价格：￥99.9</h2>
+          <h2>介绍:大床房</h2>
+          <h2>入住时间:2015.11.23</h2>
+  </div>
 
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
-		    
-		<div class="list">
-		    <div class="item item-thumbnail-left" href="#">
-		      <img src="__IMG__/jiudian.jpg">
-		      <h2>价格：￥99.9</h2>
-		      <h2>介绍:大床房</h2>
-		      <h2>入住时间:2015.11.23</h2>
-                 <button class="button button-icon-right button-small button-positive
-                 pull button-right">
-                评价赢积分
-               </button>
-		    </div>
+
+
+   <div class="item item-thumbnail-left">
+    <img src="__IMG__/jiudian.jpg">
+     <h2>价格：￥99.9</h2>
+          <h2>介绍:大床房</h2>
+          <h2>入住时间:2015.11.23</h2>
+   </div>
+</div>
 	    </div>
 	    
 	</div>
