--- a/Application/Litian/View/User/unpay.html
+++ b/Application/Litian/View/User/unpay.html
@@ -7,7 +7,7 @@
 
 
     <link href="__CSS__/style.css" rel="stylesheet">
-    <link href="__CSS__/iconfont.css" rel="stylesheet">
+    <link href="__LIB__/ionic/css/ionic.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then remove the CSS include above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
