--- a/Application/Home/View/Index/indexDate.html
+++ b/Application/Home/View/Index/indexDate.html
@@ -22,7 +22,7 @@
 			<div class="col stable">1</div>
 			<div class="col stable">2</div>
 			<div class="col stable">3</div>
-			<div class="col">4</div>
+			<div class="col positive">4</div>
 			<div class="col">5</div>
 		</div>
 		<div class="item row">
