--- a/Application/Anqiang/View/User/allcomments.html
+++ b/Application/Anqiang/View/User/allcomments.html
@@ -26,7 +26,7 @@
 </head>
 <body ng-controller="MyCtrl">
   <div class="bar bar-header bar-positive">
-    <a class="button icon button-icon ion-chevron-left"></a>
+    <a class="button  button-icon icon-iconfontunie61e"></a>
     <h1 class="title">所有评论</h1>
   </div>
   <div class="scroll-content  has-header">
