--- a/Application/Anqiang/View/User/comments.html
+++ b/Application/Anqiang/View/User/comments.html
@@ -67,13 +67,13 @@
 </head>
 <body  ng-app="starter" ng-controller="actionsheetCtl">
 <div class="bar bar-header bar-positive">
-	<a class="button icon button-icon ion-chevron-left"></a>
+	<a class="button icon button-icon icon-iconfontunie61e"></a>
 	<h1 class="title">我要评价</h1>
 </div>
 <div class="scroll-content has-header">
 	<div class="item item-thumbnail-left">
 	<img src="__IMG__/rujia.jpg">
-	<h2><i class="icon ion-social-yen"></i>120</h2>
+	<h2><i class="icon-weibiaoti1"></i>120</h2>
 	<p>介绍</p>
 	</div>
 	<div class="list">
@@ -94,9 +94,10 @@
 	
 	<!-- <div class="item item-body"> -->
 	<div class="row">
-		<div class="col col-33-center">
+		<div class="col col-center col-33">
 		<button class="button button-small button-outline ">
-		<i class="icon ion-image"></i>
+		<!-- <i class="icon ion-image"></i> -->
+    <i class="icon icon-icontupian"></i>
 		上传图片
 		</button>
 		</div>
