--- a/Application/Anqiang/View/User/myscore.html
+++ b/Application/Anqiang/View/User/myscore.html
@@ -39,11 +39,11 @@
 </div>
 <div class="tabs tabs-icon-top tabs-positive">
   <a class="tab-item">
-    <i class="icon ion-home"></i>
+    <i class="icon icon-shouye"></i>
     首页
   </a>
   <a class="tab-item">
-    <i class="icon ion-ios-person"></i>
+    <i class="icon icon-gerenzhongxin"></i>
     个人中心
   </a>
 </div>
