--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -10,33 +10,56 @@
       </ion-slide-box>
 <!-- 酒店介绍 -->
 <div class="list">
-    <a class="item item-thumbnail" href="#/tab/introduction">
+    <a class="item item-thumbnail row" href="#/tab/introduction">
+      <div class="col">
       <h1 class="energized">4.9分</h1>
       <h2 class="energized">棒极了</h2>
       <p>100%好评</p>
       <p>84条评论></p>
-      <img src="cover.jpg">
+      </div>
+      <div class="col">
+        <img src="__IMG__/home-ditu.jpg">
+      </div>
     </a>
 </div>
-<!-- 查看评论 -->
-<a href="#/tab/evaluation"><div style="margin-bottom: 0px; margin-top: -9px;"><button class="button button-full">查看评论</button></div></a>
-<!-- 选择房型 -->
-<div class="row" style="margin-top: -25px;">
-  <a class="button button-stable button-full button-positive col">全日房</a>
-  <div class="line"></div>
-  <a href="" class="button button-stable button-full col">小时房</a>
+<div class="list">
+<a class="item item-icon-left" href="#/tab/date">
+    <i class="icon ion-ios-calendar-outline"></i>
+    12月01日-12月02日
+    <span class="item-note positive">
+      共1晚>
+    </span>
+  </a>
+  <a class="item item-icon-left" href="#/tab/date">
+    <h2>豪华套房</h2>
+    <p>暂无房型信息</p>
+    <span class="item-note energized">
+      ￥328起
+    </span>
+  </a>
+  <a class="item item-icon-left" href="#/tab/date">
+    <h2>景观大床房</h2>
+    <p>55平米大床1.8m有wifi</p>
+    <span class="item-note energized">
+      ￥212起
+    </span>
+  </a>
+  <a class="item item-icon-left" href="#/tab/date">
+    <h2>豪华家庭套房</h2>
+    <p>80平米大床1.8m有wifi</p>
+    <span class="item-note energized">
+      ￥368起
+    </span>
+  </a>
 </div>
-<!-- 日期 -->
-    <div class="row">
-      <div class="col">
-        <h3>日</h3>
-        <h3>期</h3>
-      </div>
-      <div class="col">
-      <h6>2015年11月23日入住</h6>
-      <h6>2015年11月24日离店</h6>
-      </div>
-      <a href="#/tab/date" class="col button button-icon icon ion-chevron-right"></a>
-</div>
+<div class="list">
+<a class="item item-icon-left" href="#/tab/date">
+    <i class="icon ion-ios-clock-outline"></i>
+    钟点房
+    <span class="item-note positive">
+      3小时/￥91起
+    </span>
+  </a>
+  </div>
 </ion-view>
 </script>
