--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -17,6 +17,7 @@
 			<th>手机号</th>
 			<th>地址</th>
 			<th>邮箱</th>
+			<th>岗位</th>
 			<th>操作</th>
 		</tr>
 		<foreach name="M:getUsers()" item="user" key="k">
@@ -27,9 +28,14 @@
 				<td>{$user[phonenumber]}</td>
 				<td>{$user[address]}</td>
 				<td>{$user[email]}</td>
-				<td><a class="button" href="{:U('detail?id='.$user['id'].'&p='.I('get.p'))}">查看</a></td>
-				<td><a class="button" href="{:U('edit?id=' . $user['id'], I('get.'))}">编辑</a></td>
-				<td><a class="button" href="{:U('delete?id='.$user['id'].'&p='.I('get.p'))}">删除</a></td>
+				<td><foreach name="M:getPostsByUserId($user['id'])" item="post">
+				{:dump($post)}
+				{:$post['post_name']}
+				<br />
+				</foreach></td>
+				<td><a class="button" href="{:U('detail?id='.$user['id'].'&p='.I('get.p'))}">查看</a>&nbsp;&nbsp;
+				<a class="button" href="{:U('edit?id=' . $user['id'], I('get.'))}">编辑</a>&nbsp;&nbsp;
+				<a class="button" href="{:U('delete?id='.$user['id'].'&p='.I('get.p'))}">删除</a></td>
 			</tr>
 		</foreach>	
 	</table>
