--- a/Application/Home/View/Index/indexTabs.html
+++ b/Application/Home/View/Index/indexTabs.html
@@ -1,19 +1,19 @@
 <script id="templates/indexTabs.html" type="text/ng-template">
       <ion-tabs class="tabs-icon-top tabs-positive">
 
-        <ion-tab title="首页" icon="ion-home" href="#/tab/home">
+        <ion-tab title="首页" icon="iconfont icon-shouye" href="#/tab/home">
           <ion-nav-view name="home-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="搜周边" icon="ion-location" href="#/tab/rim">
+        <ion-tab title="搜周边" icon="iconfont icon-zhoubian" href="#/tab/rim">
           <ion-nav-view name="rim-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="活动" icon="ion-ios-list" href="#/tab/activity">
+        <ion-tab title="活动" icon="iconfont icon-iconfonticon" href="#/tab/activity">
           <ion-nav-view name="activity-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="个人中心" icon="ion-person" href="#/tab/personal">
+        <ion-tab title="个人中心" icon="iconfont icon-unie611" href="#/tab/personal">
           <ion-nav-view name="personal-tab"></ion-nav-view>
         </ion-tab>
 
