--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -1,7 +1,7 @@
 	<div>
         <a class="button"  href="{:U('add')}" >添加用户</a>
     </div>
-    <form action="{:U('index?p=',I('get.'))}" method="get">
+    <form action="{:U('index?p=', I('get.'))}" method="get">
     <div>
     	<input type="text" placeholder="search" name="keywords" value ="{:I('get.keywords')}"
          ></input>
@@ -11,8 +11,8 @@
 		<tr>
 			<th>序号</th>
 			<?php $order = I('get.order') ?>
-			<th><a href="<eq name='order' value="desc"> {:U('index?order=asc',I('get.'))}  
-			<else/> {:U('index?order=desc',I('get.'))} </eq>">ID</a></th>	
+			<th><a href="<eq name='order' value="desc"> {:U('index?order=asc', I('get.'))}  
+			<else/> {:U('index?order=desc', I('get.'))} </eq>">ID</a></th>	
 			<th>name</th>
 			<th>手机号</th>
 			<th>地址</th>
@@ -28,13 +28,15 @@
 				<td>{$user[phonenumber]}</td>
 				<td>{$user[address]}</td>
 				<td>{$user[email]}</td>
-				<td><foreach name="M:getPostByUserId($user['id'])" item="post">{:dump($post)}{:$post['post_name']}<br /></foreach></td>
-				<td><a class="button" href="{:U('detail?id='.$user['id'],I('get.'))}">查看</a></td>
-				<td><a class="button" href="{:U('edit?id='.$user['id'],I('get.'))}">编辑</a></td>
-				<td><a class="button" href="{:U('delete?id='.$user['id'],I('get.'))}">删除</a></td>
+				<td><foreach name="M:getPostsByUserId($user['id'])" item="post">
+				{:dump($post)}
+				{:$post['post_name']}
+				<br />
+				</foreach></td>
+				<td><a class="button" href="{:U('detail?id='.$user['id'].'&p='.I('get.p'))}">查看</a>&nbsp;&nbsp;
+				<a class="button" href="{:U('edit?id=' . $user['id'], I('get.'))}">编辑</a>&nbsp;&nbsp;
+				<a class="button" href="{:U('delete?id='.$user['id'].'&p='.I('get.p'))}">删除</a></td>
 			</tr>
 		</foreach>	
 	</table>
 	</form>
-	 
-	{:$M->getPageShow()}
