调整了一下首页，可以动了
不能动肯定是嵌套的有问题出现了多个list

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-  <ion-nav-bar class="bar-positive">
+  <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
