--- a/Application/Home/View/Index/indexTabs.html
+++ b/Application/Home/View/Index/indexTabs.html
@@ -1,5 +1,5 @@
 <script id="templates/indexTabs.html" type="text/ng-template">
-      <ion-tabs class="tabs-icon-top tabs-positive">
+      <ion-tabs class="tabs-icon-top tabs-stable">
 
         <ion-tab title="首页" icon="iconfont icon-shouye" href="#/tab/home">
           <ion-nav-view name="home-tab"></ion-nav-view>
