--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -11,22 +11,23 @@
   <script src="__LIB__/ionic/js/ionic.bundle.js"></script>
 
   <!-- your app's js -->
-   <script src="{:U('indexApp.js')}"></script>
+  <script src="{:U('indexApp.js')}"></script>
    <!-- <script src="__JS__/app.js"></script>
    <script src="__JS__/controllers.js"></script> -->
 
-</head>
-<body>
+ </head>
+ <body>
   <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <ion-nav-view></ion-nav-view>
-    <!-- include -->
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+  </ion-nav-bar>
+<ion-nav-view></ion-nav-view>
+<!-- include -->
 <include file="indexTabs" />
 <include file="indexHome" />
 <include file="indexFullTime" />
 <include file="indexDate" />
+<include file="indexConfirmOrder" />
 <include file="indexIntroduction" />
 <include file="indexRim" />
 <include file="indexEvaluation" />
@@ -44,6 +45,5 @@
 
 
 </html>
-
 
 
