--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -22,28 +22,28 @@
         <img src="__IMG__/home-ditu.jpg">
       </div>
     </a>
-    <a class="item item-icon-left" href="#/tab/date">
+    <a class="item item-icon-left" href="#/tab/confirmOrder">
     <i class="icon ion-ios-calendar-outline"></i>
     12月01日-12月02日
     <span class="item-note positive">
       共1晚>
     </span>
   </a>
-  <a class="item item-icon-left" href="#/tab/date">
+  <a class="item item-icon-left" href="#/tab/confirmOrder">
     <h2>豪华套房</h2>
     <p>暂无房型信息</p>
     <span class="item-note energized">
       ￥328起
     </span>
   </a>
-  <a class="item item-icon-left" href="#/tab/date">
+  <a class="item item-icon-left" href="#/tab/confirmOrder">
     <h2>景观大床房</h2>
     <p>55平米大床1.8m有wifi</p>
     <span class="item-note energized">
       ￥212起
     </span>
   </a>
-  <a class="item item-icon-left" href="#/tab/date">
+  <a class="item item-icon-left" href="#/tab/confirmOrder">
     <h2>豪华家庭套房</h2>
     <p>80平米大床1.8m有wifi</p>
     <span class="item-note energized">
@@ -52,7 +52,7 @@
   </a>
 </div>
 <div>
-<a class="item item-icon-left" href="#/tab/date">
+<a class="item item-icon-left" href="#/tab/confirmOrder">
     <i class="icon ion-ios-clock-outline"></i>
     钟点房
     <span class="item-note positive">
