--- a/Application/Home/View/Index/indexApp.js.html
+++ b/Application/Home/View/Index/indexApp.js.html
@@ -86,6 +86,15 @@ app.config(function($stateProvider, $urlRouterProvider,$ionicConfigProvider){
             }
         }
     })
+    .state('tabs.confirmOrder',{
+        url: "/confirmOrder",
+        views:{
+            //填写订单
+            'home-tab':{
+                templateUrl: "templates/indexConfirmOrder.html"
+            }
+        }
+    })
     .state("tabs.rim",{
         url: "/rim",
         views: {
