--- a/Application/Liuxi/View/User/personalcenter.html
+++ b/Application/Liuxi/View/User/personalcenter.html
@@ -81,8 +81,8 @@
 
     <a class="item item-Ionicons-left item-Ionicons-right" href="#">
     <i class="Ionicons icon-quanbudingdan"></i>
-      全部订单
-    <i class="Ionicons icon-iconfontunie623"></i>
+      <p>全部订单</p>
+    <i class="Ionicons icon-iconfontunie61f"></i>
     </a>
     <a class="item item-Ionicons-left item-Ionicons-right" href="#">
     <i class="Ionicons icon-jifen"></i>
@@ -97,7 +97,7 @@
   </div>
 </ion-content>
  
-<div class="tabs tabs-Ionicons-top tabs-positive">
+<div class="tabs tabs-icon-top tabs-positive">
   <a class="tab-item">
     <i class="Ionicons icon-shouye"></i>
       首页
