--- a/Application/Anqiang/View/User/index.html
+++ b/Application/Anqiang/View/User/index.html
@@ -2,7 +2,7 @@
 <a class="buttom" href="{:U('add?p='.I('get.p'))}">
     添加用户
 </a>
-<a class="buttom" href="{:U('sort')}">
+<!-- <a class="buttom" href="{:U('sort')}"> -->
 
 <form action="{:U('index')}" method="get">
     <div>
