--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -1,5 +1,5 @@
 	<div>
-        <a class="button"  href="{:U('add')}" >添加用户</a>
+        <a class="button"  href="{:U('add',I('get.'))}" >添加用户</a>
     </div>
     <form action="{:U('index?p=', I('get.'))}" method="get">
     <div>
@@ -29,14 +29,18 @@
 				<td>{$user[address]}</td>
 				<td>{$user[email]}</td>
 				<td><foreach name="M:getPostsByUserId($user['id'])" item="post">
-				{:dump($post)}
+				
 				{:$post['post_name']}
 				<br />
 				</foreach></td>
-				<td><a class="button" href="{:U('detail?id='.$user['id'].'&p='.I('get.p'))}">查看</a>&nbsp;&nbsp;
+				<td><a class="button" href="{:U('detail?id='.$user['id'],I('get.'))}">查看</a>&nbsp;&nbsp;
 				<a class="button" href="{:U('edit?id=' . $user['id'], I('get.'))}">编辑</a>&nbsp;&nbsp;
-				<a class="button" href="{:U('delete?id='.$user['id'].'&p='.I('get.p'))}">删除</a></td>
+				<a class="button" href="{:U('delete?id='.$user['id'],I('get.'))}">删除</a></td>
 			</tr>
 		</foreach>	
 	</table>
 	</form>
+
+	{:$M->getPageShow()}
+
+
