--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -11,18 +11,22 @@
       </ion-slide-box>
 <!-- 酒店介绍 -->
 <div class="list">
-    <a class="item item-thumbnail row" href="#/tab/introduction">
+    <div class="item item-thumbnail row"> 
+    <a href="#/tab/evaluation">
       <div class="col">
       <h1 class="energized">4.9分</h1>
       <h2 class="energized">棒极了</h2>
       <p>100%好评</p>
       <p>84条评论></p>
-      </div>
+      </div></a>
+      <a href="#/tab/introduction">
       <div class="col">
+      
         <img src="__IMG__/home-ditu.jpg">
+      </div></a>
       </div>
-    </a>
-    <a class="item item-icon-left" href="#/tab/confirmOrder">
+    
+    <a class="item item-icon-left" href="#/tab/date">
     <i class="icon ion-ios-calendar-outline"></i>
     12月01日-12月02日
     <span class="item-note positive">
