添加小图标

--- a/Public/lib/ionic/css/ionic.css
+++ b/Public/lib/ionic/css/ionic.css
@@ -35,73 +35,7 @@
   font-weight: normal;
   font-style: normal; }
 
-.ion, .ionicons,
-.icon-jifen:before ,
-.icon-daipingjia:before ,
-.icon-iconzhoubian:before ,
-.icon-ruzhu:before ,
-.icon-zhoubian:before ,
-.icon-weibiaoti1:before ,
-.icon-gerenzhongxin:before ,
-.icon-shouye:before ,
-.icon-kefu:before ,
-.icon-daizhifu:before ,
-.icon-daipingjia1:before ,
-.icon-tag:before ,
-.icon-daipingjia2:before ,
-.icon-daifukuan:before ,
-.icon-sousu:before ,
-.icon-myfill:before ,
-.icon-unie64d:before ,
-.icon-unie65c:before ,
-.icon-unie63b:before ,
-.icon-home:before ,
-.icon-unie64a:before ,
-.icon-unie64c:before ,
-.icon-unie611:before ,
-.icon-unie615:before ,
-.icon-unie606:before ,
-.icon-unie637:before ,
-.icon-unie647:before ,
-.icon-unie648:before ,
-.icon-unie649:before ,
-.icon-tabmeinactive:before ,
-.icon-daipinglun:before ,
-.icon-plane:before ,
-.icon-computer:before ,
-.icon-daifukuan1:before ,
-.icon-kefu1:before ,
-.icon-quanbudingdan:before ,
-.icon-studyuser:before ,
-.icon-iconfonticon:before ,
-.icon-micbfenxiang:before ,
-.icon-shouye1:before ,
-.icon-iconbianqian:before ,
-.icon-iconditu:before ,
-.icon-iconpingjia:before ,
-.icon-iconshezhi:before ,
-.icon-iconshijian:before ,
-.icon-iconshoucang:before ,
-.icon-icontianxie:before ,
-.icon-icontupian:before ,
-.icon-feedback:before ,
-.icon-youhuihuodong:before ,
-.icon-quanbudingdan1:before ,
-.icon-iconfontunie04b:before ,
-.icon-iconfontunie036:before ,
-.icon-iconfontunie059:before ,
-.icon-iconfontunie60a:before ,
-.icon-iconfontunie60b:before ,
-.back-button:before ,
-.icon-iconfontunie61f:before ,
-.icon-iconfontunie614:before ,
-.icon-iconfontunie616:before ,
-.icon-iconfontunie621:before ,
-.icon-iconfontunie622:before ,
-.icon-iconfontunie623:before ,
-.icon-iconfontunie624:before ,
-.icon-iconfontunie639:before ,
-.icon-iconfontunie657:before 
+
 {
   display: inline-block;
   font-family: "Ionicons";
@@ -113,75 +47,73 @@
   text-rendering: auto;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
-
-
-.icon-jifen:before { content: "\e62b"; }
-.icon-daipingjia:before { content: "\e62c"; }
-.icon-iconzhoubian:before { content: "\e62d"; }
-.icon-ruzhu:before { content: "\e62e"; }
-.icon-zhoubian:before { content: "\e62f"; }
-.icon-weibiaoti1:before { content: "\e631"; }
-.icon-gerenzhongxin:before { content: "\e632"; }
-.icon-shouye:before { content: "\e633"; }
-.icon-kefu:before { content: "\e634"; }
-.icon-daizhifu:before { content: "\e635"; }
-.icon-daipingjia1:before { content: "\e636"; }
-.icon-tag:before { content: "\e62a"; }
-.icon-daipingjia2:before { content: "\e637"; }
-.icon-daifukuan:before { content: "\e638"; }
-.icon-sousu:before { content: "\e630"; }
-.icon-myfill:before { content: "\e600"; }
-.icon-unie64d:before { content: "\e603"; }
-.icon-unie65c:before { content: "\e604"; }
-.icon-unie63b:before { content: "\e605"; }
-.icon-home:before { content: "\e606"; }
-.icon-unie64a:before { content: "\e607"; }
-.icon-unie64c:before { content: "\e608"; }
-.icon-unie611:before { content: "\e609"; }
-.icon-unie615:before { content: "\e60a"; }
-.icon-unie606:before { content: "\e60b"; }
-.icon-unie637:before { content: "\e60c"; }
-.icon-unie647:before { content: "\e60d"; }
-.icon-unie648:before { content: "\e60e"; }
-.icon-unie649:before { content: "\e60f"; }
-.icon-tabmeinactive:before { content: "\e63a"; }
-.icon-daipinglun:before { content: "\e63b"; }
-.icon-plane:before { content: "\e601"; }
-.icon-computer:before { content: "\e602"; }
-.icon-daifukuan1:before { content: "\e63c"; }
-.icon-kefu1:before { content: "\e63d"; }
-.icon-quanbudingdan:before { content: "\e63e"; }
-.icon-studyuser:before { content: "\e610"; }
-.icon-iconfonticon:before { content: "\e63f"; }
-.icon-micbfenxiang:before { content: "\e629"; }
-.icon-shouye1:before { content: "\e640"; }
-.icon-iconbianqian:before { content: "\e621"; }
-.icon-iconditu:before { content: "\e622"; }
-.icon-iconpingjia:before { content: "\e623"; }
-.icon-iconshezhi:before { content: "\e624"; }
-.icon-iconshijian:before { content: "\e625"; }
-.icon-iconshoucang:before { content: "\e626"; }
-.icon-icontianxie:before { content: "\e627"; }
-.icon-icontupian:before { content: "\e628"; }
-.icon-feedback:before { content: "\e611"; }
-.icon-youhuihuodong:before { content: "\e641"; }
-.icon-quanbudingdan1:before { content: "\e642"; }
-.icon-iconfontunie04b:before { content: "\e612"; }
-.icon-iconfontunie036:before { content: "\e613"; }
-.icon-iconfontunie059:before { content: "\e614"; }
-.icon-iconfontunie60a:before { content: "\e615"; }
-.icon-iconfontunie60b:before { content: "\e616"; }
-.back-button:before { content: "\e617"; }
-.icon-iconfontunie61f:before { content: "\e618"; }
-.icon-iconfontunie614:before { content: "\e619"; }
-.icon-iconfontunie616:before { content: "\e61a"; }
-.icon-iconfontunie621:before { content: "\e61b"; }
-.icon-iconfontunie622:before { content: "\e61c"; }
-.icon-iconfontunie623:before { content: "\e61d"; }
-.icon-iconfontunie624:before { content: "\e61e"; }
-.icon-iconfontunie639:before { content: "\e61f"; }
-.icon-iconfontunie657:before { content: "\e620"; }
+  -moz-osx-font-smoothing: grayscale; },
+.i,
+.ico,
+,
+.i,
+.icon,
+,
+.ic,
+.ic,
+.,
+.icon-myfill:before,
+.icon-unie64d:before,
+.icon-unie65c:before,
+.icon-unie63b:before,
+.icon-home:before,
+.icon-unie64a:before,
+.icon-unie64c:before,
+.icon-unie611:before,
+.icon-unie615:before,
+.icon-unie606:before,
+.icon-unie637:before,
+.icon-unie647:before,
+.icon-unie648:before,
+.icon-unie649:before,
+.icon-tabmeinactive:before,
+.icon-daipinglun:before,
+.icon-plane:before,
+.icon-computer:before,
+.icon-miaojiesellercalendar:before,
+.icon-wifi1:before,
+.icon-daifukuan1:before,
+.icon-kefu1:before,
+.icon-tingche:before,
+.icon-quanbudingdan:before,
+.icon-feng:before,
+.icon-studyuser:before,
+.icon-iconfonticon:before,
+.icon-micbfenxiang:before,
+.icon-shouye1:before,
+.icon-iconbianqian:before,
+.icon-iconditu:before,
+.icon-iconpingjia:before,
+.icon-iconshezhi:before,
+.icon-iconshijian:before,
+.icon-iconshoucang:before,
+.icon-icontianxie:before,
+.icon-icontupian:before,
+.icon-feedback:before,
+.icon-youhuihuodong:before,
+.icon-quanbudingdan1:before,
+.icon-rili:before,
+.icon-iconfontunie04b:before,
+.icon-iconfontunie036:before,
+.icon-iconfontunie059:before,
+.icon-iconfontunie60a:before,
+.icon-iconfontunie60b:before,
+.icon-iconfontunie61e:before,
+.icon-iconfontunie61f:before,
+.icon-iconfontunie614:before,
+.icon-iconfontunie616:before,
+.icon-iconfontunie621:before,
+.icon-iconfontunie622:before,
+.icon-iconfontunie623:before,
+.icon-iconfontunie624:before,
+.icon-iconfontunie639:before,
+.icon-iconfontunie657:before,
+.icon-zhongdianfangbeijing:before,
 
 
 /**
