--- a/Application/Litian/View/User/detail.html
+++ b/Application/Litian/View/User/detail.html
@@ -2,3 +2,4 @@
 <label>密码</label>:{$user[password]}</br>
 <label>手机</label>:{$user[phone]}</br>
 <label>邮箱</label>:{$user[email]}</br>
+<a class="button" href="{:U('index?id= ',I('get.'))}">返回</a>
