--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -27,7 +27,7 @@
       </div>
     
     <a class="item item-icon-left" href="#/tab/date">
-    <i class="icon ion-ios-calendar-outline"></i>
+    <i class="icon iconfont icon-rili"></i>
     12月01日-12月02日
     <span class="item-note positive">
       共1晚>
